clapi_macros/test_suite/tests/ui/fail/invalid_command_value/invalid_command_about.rs
use clapi::macros::*;

#[command(about=123)]
fn app(){}

fn main(){}